--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,105 @@
 </head>
 
 <body>
-    <h1>hi</h1>
+    <header>
+        <div class="header__wrapper">
+            <div class="header__main">
+                <div class="container">
+                    <div class="header__main__menu toggle-side-menu">
+                        <i class="fas fa-bars"></i>
+                    </div>
+
+                    <nav>
+                        <ul>
+                            <li class="active"><a href="#">صفحه اصلی</a></li>
+                            <li class="has-children">
+                                <a href="#">محصولات</a>
+                                <ul>
+                                    <li><a href="#">محصول 1</a></li>
+                                    <li><a href="#">محصول 2</a></li>
+                                    <li><a href="#">محصول 3</a></li>
+                                    <li><a href="#">محصول 4</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">خدمات</a></li>
+                            <li><a href="#">گالری</a></li>
+                            <li><a href="#">اخبار و مقالات</a></li>
+                            <li><a href="#">همکاری با ما</a></li>
+                            <li><a href="#">ارتباط با ما</a></li>
+                        </ul>
+                    </nav>
+
+                    <div class="header__main__left">
+                        <a href="#" class="logo">
+                            <img src="images/logo.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="header__main__sm">
+                <div class="close-aside toggle-side-menu"><i class="far fa-times"></i></div>
+
+                <div>
+                    <div class="header__main__sm__head">
+                        <img src="images/about-teacher.jpeg" alt="user image" class="user">
+                        <div class="icon-box">
+                            <a href="#"> <i class="fas fa-shopping-cart"></i> <span>سبد خرید</span> </a>
+                            <a href="#">
+                                <!-- when user is singed in -->
+                                <i class="fas fa-sign-in-alt"></i> <span>خروج</span>
+
+                                <!-- when user is not singed in -->
+                                <!-- <i class="fas fa-user"></i> <span>حساب کاربری</span> -->
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="header__main__sm__body">
+                        <div class="d-flex justify-content-center">
+                            <a href="#" class="btn btn-scorize">رزرو مشاوره مهاجرت</a>
+                        </div>
+
+                        <ul>
+                            <li><a href="#">موفقیت ها</a></li>
+                            <li><a href="#">مهاجرت تحصیلی با اسکورایز</a></li>
+                            <li class="has-children-sm">
+                                <a href="#">خدمات</a>
+                                <ul>
+                                    <li><a href="#">CV,SOP,...</a></li>
+                                    <li><a href="#">جلسه آزمایشی اسکایپ با اساتید</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">پرسش و پاسخ</a></li>
+                            <li><a href="#">محصولات</a></li>
+                        </ul>
+
+                    </div>
+                </div>
+
+                <div class="header__main__sm__footer">
+                    <div class="contact">
+                        <span>تماس با اسکورایز</span>
+                        <a href="tel:02128426875">۰۲۱-۲۸۴۲۶۸۷۵ <i class="fas fa-phone"></i></a>
+                    </div>
+
+                    <div class="icons">
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-telegram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+    <section class="f5f5f5" style="height: 500vh;">
+        <div class="container pt-5">
+            <h1>سلام</h1>
+        </div>
+    </section>
 
     <script src="js/jquery.slim.js"></script>
     <script src="js/bootstrap.min.js"></script>
