--- a/base.html
+++ b/base.html
@@ -93,12 +93,99 @@
     </header>
 
     <main>
-        <section class="f5f5f5" style="height: 500vh;">
-            <div class="container pt-5">
-                <h1>hi!</h1>
-            </div>
-        </section>
+
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="row footer__list justify-content-center">
+                <div class="col-md-3 col-sm-6 col-12">
+                    <img loading="lazy" src="images/logo.svg" alt="">
+                    <p class="fw-500 text-color ps-3">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
+                    </p>
+                </div>
+
+                <div class="col-md-3 col-sm-6 col-12">
+                    <h6 class="title">ارتباط با ما</h6>
+
+                    <div class="footer__contact">
+                        <i class="fad fa-map-marker-alt"></i>
+                        <p>
+                            تهران ، فلکه دوم صادقیه ، برج گلدیس ، واحد 621
+                        </p>
+                    </div>
+
+                    <div class="footer__contact">
+                        <i class="fad fa-at"></i>
+                        <p>
+                            <a href="#">
+                                info@samsang.ir
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="footer__contact">
+                        <i class="fad fa-phone"></i>
+                        <p>
+                            <a href="tel:09123456789">
+                                09123456789
+                            </a>
+                        </p>
+                    </div>
+
+                    <div class="footer__social">
+                        <a href="#" class="item"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="#" class="item"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="#" class="item"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="#" class="item"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+
+                </div>
+
+                <div class="col-md-3 col-sm-6 col-12">
+                    <h6 class="title"> دسترسی سریع </h6>
+                    <ul>
+                        <li><a href="#">بخش ماشین سازی سنگ مصنوعی</a></li>
+                        <li><a href="#">آموزش و انتقال تکنولوژی سنگ مصنوعی</a></li>
+                        <li><a href="#">کانال تلگرام ماشین سازی سنگ مصنوعی</a></li>
+                        <li><a href="#">لیست قیمت محصولات سنگ مصنوعی</a></li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3 col-sm-6 col-12">
+                    <h6 class="title">راهنمای مشتریان</h6>
+                    <ul>
+                        <li><a href="#">سوالات متداول</a></li>
+                        <li><a href="#">کپی رایت</a></li>
+                        <li><a href="#">حریم خصوصی</a></li>
+                        <li><a href="#">قوانین و مقررات سایت</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="footer__copyright">
+                <div class="container">
+                    <div class="box">
+                        <div class="footer__copyright__right">
+                            <p>
+                                © تمامی حقوق این سایت برای
+                                <br>
+                                شرکت <a href="/">۱۰۰ از ۰</a> محفوظ است.
+                            </p>
+                        </div>
+                        <ul class="footer__copyright__left">
+                            <li><a href="#">قوانین و مقررات سایت</a></li>
+                            <li><a href="#">حریم خصوصی</a></li>
+                            <li><a href="#">کپی رایت</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/jquery.slim.js"></script>
     <script src="js/bootstrap.min.js"></script>
