added gallery list

--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/css/lightgallery.css"> -->
 </head>
 
 <body>
@@ -103,126 +104,78 @@
             </div>
         </section>
 
-        <section class="product__list color-bg wrapper">
+        <section class="gallery__list color-bg wrapper">
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                <div class="row" id="gallery-wrapper">
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-1.jpg">
+                            <img src="images/product-1.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-2.jpg">
+                            <img src="images/product-2.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-3.jpg">
+                            <img src="images/product-3.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-4.jpg">
+                            <img src="images/product-4.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-1.jpg">
+                            <img src="images/product-1.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-2.jpg">
+                            <img src="images/product-2.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-3.jpg">
+                            <img src="images/product-3.jpg" />
                         </a>
                     </div>
 
-                    <div class="col-12 col-md-4 col-lg-3">
-                        <a href="#" class="item">
-                            <div class="img-wrapper">
-                                <img src="images/product-1.jpg" alt="">
-                                <div class="border-wrapper">
-                                    <div class="brd-1"></div>
-                                    <div class="brd-2"></div>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="title">سنگ نمای داخل</p>
-                            </div>
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-4.jpg">
+                            <img src="images/product-4.jpg" />
+                        </a>
+                    </div>
+
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-1.jpg">
+                            <img src="images/product-1.jpg" />
+                        </a>
+                    </div>
+
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-2.jpg">
+                            <img src="images/product-2.jpg" />
+                        </a>
+                    </div>
+
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-3.jpg">
+                            <img src="images/product-3.jpg" />
+                        </a>
+                    </div>
+
+                    <div class="col-121 col-sm-6 col-md-4 col-lg-3">
+                        <a class="gallery-item" href="/images/product-4.jpg">
+                            <img src="images/product-4.jpg" />
                         </a>
                     </div>
 
@@ -237,7 +190,6 @@
                             </ul>
                         </nav>
                     </div>
-
                 </div>
             </div>
         </section>
@@ -337,6 +289,7 @@
     <script src="js/jquery.slim.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/owl.min.js"></script>
+    <script src="js/lightgallery.js"></script>
     <script src="js/main.js"></script>
 </body>
 
