--- a/blog-list.html
+++ b/blog-list.html
@@ -106,7 +106,7 @@
         <section class="blog__list color-bg wrapper">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -166,7 +166,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -186,7 +186,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -206,7 +206,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -226,7 +226,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -246,7 +246,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
@@ -266,7 +266,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="item">
                             <div class="img-wrapper">
                                 <img src="images/product-1.jpg" alt="">
