--- a/blog-list.html
+++ b/blog-list.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="header__wrapper">
             <div class="header__main">
                 <div class="container">
