blog single complete

--- a/blog-details.html
+++ b/blog-details.html
@@ -96,8 +96,94 @@
         <section class="blog__details color-bg wrapper">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-3"></div>
+                    <div class="col-12 col-md-3 aside-wrapper">
+                        <aside class="blog__details__aside">
+                            <div class="blog__details__aside__close filter-button">
+                                <i class="far fa-times"></i>
+                            </div>
+                            <form action="">
+
+                                <div class="blog__details__aside__box">
+                                    <h2>جستجو کنید</h2>
+                                    <div class="custom-input has-search">
+                                        <input type="text" placeholder="جستجو در اخبار  ...">
+                                        <span class="custom-input-border">&nbsp;</span>
+                                    </div>
+                                </div>
+
+                                <div class="blog__details__aside__box">
+                                    <h2>دسته بندی ها</h2>
+
+                                    <div class="categories">
+                                        <div class="categories__item">
+                                            <a href="#">
+                                                <div class="before"></div>
+                                                کسب و کار
+                                            </a>
+                                        </div>
+                                        <div class="categories__item">
+                                            <a href="#">
+                                                <div class="before active"></div>
+                                                biz tv
+                                            </a>
+                                        </div>
+                                        <div class="categories__item">
+                                            <a href="#">
+                                                <div class="before"></div>
+                                                دسته بندی 3
+                                            </a>
+                                        </div>
+                                        <div class="categories__item has-children">
+                                            <a href="#">
+                                                <div class="before"></div>
+                                                رشته های تحصیلی
+                                            </a>
+
+                                            <div class="overlay">
+                                                <div class="categories">
+                                                    <div class="categories__item">
+                                                        <a href="#">
+                                                            <div class="before"></div>
+                                                            رشته ریاضی
+                                                        </a>
+                                                    </div>
+                                                    <div class="categories__item">
+                                                        <a href="#">
+                                                            <div class="before"></div>
+                                                            رشته فیزیک
+                                                        </a>
+                                                    </div>
+                                                    <div class="categories__item">
+                                                        <a href="#">
+                                                            <div class="before"></div>
+                                                            رشته شیمی
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                        <div class="categories__item">
+                                            <a href="#">
+                                                <div class="before"></div>
+                                                دسته بندی 4
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                            </form>
+                        </aside>
+                    </div>
+
                     <div class="col-12 col-md-9">
+                        <div class="blog__details__breadcrumb">
+                            <a href="#"><i class="fas fa-home"></i></a>
+                            <a href="#">اخبار و مقالات</a>
+                            <span>آموزش فن بیان با ۲۴ تکنیک کاربردی</span>
+                        </div>
+
                         <div class="blog__details__box">
                             <h1 class="blog__title">
                                 موارد پرکاربرد در چسب سنگ
@@ -105,6 +191,13 @@
 
                             <img src="images/blog-1.jpg" class="img">
 
+                            <div class="tags">
+                                <a href="#" class="item">کسب و کار</a>
+                                <a href="#" class="item">لورم ایپسوم</a>
+                            </div>
+                        </div>
+
+                        <div class="blog__details__box">
                             <p class="desc">
                                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
                                 است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
